<resources>
    <string name="app_name">Blood Donation App</string>
    <string name="find_your_donor">Find Your Donor</string>
    <string name="find_donor">Find Donor</string>
    <string name="be_a_donor">Be A Donor</string>
    <string name="about_us">About Us</string>
    <string name="select_a_blood_type">Select a Blood Type</string>
    <string name="select_location">Select Location</string>
    <string name="dummy">Dummy</string>
    <string name="what_is_blood_donation">What is Blood Donation</string>
    <string name="sign_up">Sign-Up</string>
    <string name="please_fill_up_your_data">Please FIll Up Your Data</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="blood_type">Blood Type</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="your_location">Your Location</string>
    <string name="select_your_donor">Select Your Donor</string>
    <string name="more_info">More Info</string>
    <string name="send_mail">Send Mail</string>
    <string name="our_location">Our Location</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username:</string>
    <string name="hospital">Hospital</string>
    <string name="fetch_all_donors">Fetch All Donors</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="y">Y</string>
    <string name="n">N</string>
    <string name="are_you_diabetic">Are you Diabetic?</string>
    <string name="do_you_have_high_blood_pressure">Do you have high blood pressure?</string>
    <string name="new_donor">New Donor?</string>
    <string name="send_email_to_all">Send Email to ALL</string>
    <string name="dot">.</string>
    <string name="location">Location</string>
    <string name="is_high_blood_pressure">Is High Blood Pressure?</string>
    <string name="is_diabetic">Is Diabetic?</string>
    <string name="all_donors">All Donors</string>
    <string name="new_hospital">New Hospital?</string>
    <string name="hospital_signup">Hospital Signup</string>

    <string-array name="bloodType">
        <item>AB+</item>
        <item>AB-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="Location">
        <item>Nasr City</item>
        <item>Tgamou3</item>
        <item>Re7ab</item>
        <item>Korba</item>
        <item>New Cairo</item>
        <item>3absya</item>
        <item>Ramsis</item>
        <item>Ta7rer</item>
        <item>Mosky</item>
        <item>Old Cairo</item>
        <item>7elwan</item>
        <item>Waily</item>
        <item>El Nozha</item>
    </string-array>


</resources>